@@ -30,6 +30,9 @@ APP_KONFERENCE_DEBUG ?= 0
 # channel table size default
 CHANNEL_TABLE_SIZE ?= 997
 
+# conference table size default
+CONFERENCE_TABLE_SIZE ?= 199
+
 # schedule conference threads fifo ( 0 == OFF, 1 == ON )
 REALTIME ?= 1
 
@@ -79,6 +82,7 @@ CFLAGS += $(shell if uname -m | grep -q ppc; then echo "-fsigned-char"; fi)
 CFLAGS += -fPIC
 CPPFLAGS += -DCRYPTO
 CPPFLAGS += -DCHANNEL_TABLE_SIZE=$(CHANNEL_TABLE_SIZE)
+CPPFLAGS += -DCONFERENCE_TABLE_SIZE=$(CONFERENCE_TABLE_SIZE)
 CPPFLAGS += -DONEMIXTHREAD
 
 #
